[package]
name = "syn-zeug"
version = "0.1.0"
authors = ["Brooks J Rady <b.j.rady@gmail.com>"]
edition = "2021"

[dependencies]
bio = { path = "../rust-bio" }
once_cell = "1.14.0"
phf = { version = "0.11.1", features = ["macros"] }
serde = { version = "1.0.144", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.3.6", features = ["html_reports"] }
iai = "0.1.1"
pprof = { version = "0.10.1", features = ["criterion", "flamegraph"] }

[[bench]]
name = "criterion"
harness = false

[[bench]]
name = "iai"
harness = false
