[package]
name = "syn-zeug"
version = "0.1.0"
authors = ["Brooks J Rady <b.j.rady@gmail.com>"]
edition = "2021"

[dependencies]
bio = "1.1.0"
once_cell = "1.16.0"
phf = { version = "0.11.1", features = ["macros"] }
serde = { version = "1.0.150", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }
iai = "0.1.1"
pprof = { version = "0.11.0", features = ["criterion", "flamegraph"] }

[[bench]]
name = "criterion"
harness = false

[[bench]]
name = "iai"
harness = false
